--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-  <link rel="stylesheet" href="leaflet/leaflet.css">
-  <link rel="stylesheet" href="nouislider/nouislider.css">
+  <link rel="stylesheet" href="./leaflet/leaflet.css">
+  <link rel="stylesheet" href="./nouislider/nouislider.css">
   <title>Кексобукинг</title>
 </head>
 <body>
@@ -112,7 +112,8 @@
         <fieldset class="ad-form__element">
           <label class="ad-form__label" for="price">Цена за ночь, руб.</label>
           <input id="price" name="price" type="number" placeholder="1000" min="0" max="100000" required
-                 data-pristine-required-message="Поле, обязательное для заполнения">
+                 data-pristine-required-message="Поле, обязательное для заполнения"
+                 data-pristine-max-message="Максимальная цена 100000">
           <div class="ad-form__slider"></div>
         </fieldset>
         <fieldset class="ad-form__element ad-form__element--time">
@@ -238,8 +239,9 @@
     </div>
   </template>
   <script src="js/main.js" type="module"></script>
-  <script src="leaflet/leaflet.js"></script>
-  <script src="nouislider/nouislider.js"></script>
-  <script src="pristine/pristine.min.js"></script>
+  <script src="leaflet/leaflet.js" integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
+          crossorigin=""></script>
+  <script src="nouislider/nouislider.js" type="text/javascript"></script>
+  <script src="pristine/pristine.min.js" type="text/javascript"></script>
 </body>
 </html>
